--- a/NFD/NFD.fsproj
+++ b/NFD/NFD.fsproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <WarnOn>3390;$(WarnOn)</WarnOn>
   </PropertyGroup>
 
@@ -11,15 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Icu4c.Win.Full.Lib" Version="59.1.15" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\CREPDL\CREPDL.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="6.0.5" />
+    <PackageReference Update="FSharp.Core" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
